// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Autocomplete when no properties are set matches snapshot 1`] = `
<div
  className="tm-autocomplete"
>
  <div
    className="tm-search-input "
  >
    <input
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      placeholder=""
      tabIndex="0"
      title=""
      type="text"
      value=""
    />
    <div
      aria-label=""
      className="tm-button tm-hidden"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex="0"
      title=""
    >
      <svg
        fill="currentColor"
        focusable={false}
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </div>
    <div
      aria-label=""
      className="tm-button tm-bt-search"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex="0"
      title=""
    >
      submit
    </div>
  </div>
  <div
    className="tm-list-container tm-hidden"
  />
</div>
`;

exports[`Autocomplete when properties are set should match snapshot 1`] = `
<div
  className="tm-autocomplete"
>
  <div
    className="tm-search-input "
  >
    <input
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      placeholder=""
      tabIndex="0"
      title=""
      type="text"
      value="fooval"
    />
    <div
      aria-label=""
      className="tm-button "
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex="0"
      title=""
    >
      <svg
        fill="currentColor"
        focusable={false}
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </div>
    <div
      aria-label=""
      className="tm-button tm-bt-search"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex="0"
      title=""
    >
      submit
    </div>
  </div>
  <div
    className="tm-list-container"
  >
    <ul
      className="tm-list"
      role="menu"
    >
      <li
        className="tm-list-item"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        qux
      </li>
      <li
        className="tm-list-item"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        quux
      </li>
      <li
        className="tm-list-item"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        corge
      </li>
    </ul>
    <hr />
    my_foo_title
    <ul
      className="tm-list"
      role="menu"
    >
      <li
        className="tm-list-item"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        foo
      </li>
      <li
        className="tm-list-item"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        bar
      </li>
      <li
        className="tm-list-item"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        foo2
      </li>
    </ul>
  </div>
</div>
`;

exports[`Autocomplete when properties are set should match snapshot showing list 1`] = `
<div
  className="tm-autocomplete"
>
  <div
    className="tm-search-input "
  >
    <input
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      placeholder=""
      tabIndex="0"
      title=""
      type="text"
      value="fooval"
    />
    <div
      aria-label=""
      className="tm-button "
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex="0"
      title=""
    >
      <svg
        fill="currentColor"
        focusable={false}
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </div>
    <div
      aria-label=""
      className="tm-button tm-bt-search"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex="0"
      title=""
    >
      submit
    </div>
  </div>
  <div
    className="tm-list-container"
  >
    <ul
      className="tm-list"
      role="menu"
    >
      <li
        className="tm-list-item"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        qux
      </li>
      <li
        className="tm-list-item"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        quux
      </li>
      <li
        className="tm-list-item"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        corge
      </li>
    </ul>
    <hr />
    my_foo_title
    <ul
      className="tm-list"
      role="menu"
    >
      <li
        className="tm-list-item"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        foo
      </li>
      <li
        className="tm-list-item"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        bar
      </li>
      <li
        className="tm-list-item"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        foo2
      </li>
    </ul>
  </div>
</div>
`;

exports[`Autocomplete when properties are set should match snapshot without defaultItems 1`] = `
<div
  className="tm-autocomplete"
>
  <div
    className="tm-search-input "
  >
    <input
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      placeholder=""
      tabIndex="0"
      title=""
      type="text"
      value="fooval"
    />
    <div
      aria-label=""
      className="tm-button "
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex="0"
      title=""
    >
      <svg
        fill="currentColor"
        focusable={false}
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </div>
    <div
      aria-label=""
      className="tm-button tm-bt-search"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex="0"
      title=""
    >
      submit
    </div>
  </div>
  <div
    className="tm-list-container"
  >
    <ul
      className="tm-list"
      role="menu"
    >
      <li
        className="tm-list-item"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        qux
      </li>
      <li
        className="tm-list-item"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        quux
      </li>
      <li
        className="tm-list-item"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        corge
      </li>
    </ul>
    my_foo_title
  </div>
</div>
`;

exports[`Autocomplete when properties are set should match snapshot without items 1`] = `
<div
  className="tm-autocomplete"
>
  <div
    className="tm-search-input "
  >
    <input
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      placeholder=""
      tabIndex="0"
      title=""
      type="text"
      value="fooval"
    />
    <div
      aria-label=""
      className="tm-button "
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex="0"
      title=""
    >
      <svg
        fill="currentColor"
        focusable={false}
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </div>
    <div
      aria-label=""
      className="tm-button tm-bt-search"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex="0"
      title=""
    >
      submit
    </div>
  </div>
  <div
    className="tm-list-container"
  >
    my_foo_title
    <ul
      className="tm-list"
      role="menu"
    >
      <li
        className="tm-list-item"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        foo
      </li>
      <li
        className="tm-list-item"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        bar
      </li>
      <li
        className="tm-list-item"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        role="menuitem"
        tabIndex="0"
      >
        foo2
      </li>
    </ul>
  </div>
</div>
`;

exports[`Autocomplete when properties are set should match snapshot without items and defaultItems 1`] = `
<div
  className="tm-autocomplete"
>
  <div
    className="tm-search-input "
  >
    <input
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      placeholder=""
      tabIndex="0"
      title=""
      type="text"
      value="fooval"
    />
    <div
      aria-label=""
      className="tm-button "
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex="0"
      title=""
    >
      <svg
        fill="currentColor"
        focusable={false}
        height="1em"
        stroke="currentColor"
        strokeWidth="0"
        style={
          Object {
            "color": undefined,
          }
        }
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </div>
    <div
      aria-label=""
      className="tm-button tm-bt-search"
      onClick={[Function]}
      onKeyPress={[Function]}
      role="button"
      tabIndex="0"
      title=""
    >
      submit
    </div>
  </div>
  <div
    className="tm-list-container tm-hidden"
  >
    my_foo_title
  </div>
</div>
`;
